# marching-cubes

./: .gitignore  CMakeLists.txt  README.md
data/: seg_ImgSoma_17302_00020-x_14992.3_y_21970.3_z_4344.8.tiff
src/: Matrix.hpp  Mesh.hpp  Vec.hpp  Vec3.hpp  Voxel.hpp  main.cpp  marchingCubes.cpp  marchingCubes.hpp  marchingCubesStateTables.hpp  marchingCubesTables.hpp  obj.hpp  quadricErrorMetrics.hpp  tiff.cpp  tiff.hpp  util.hpp  voxel.hpp
